Wed Jun  7 19:18:15 2000  Brian Gough  <bjg@network-theory.co.uk>

	* fp-ppclinux.c: added support for ppc linux 

Tue Jun  6 19:59:50 2000  Brian Gough  <bjg@network-theory.co.uk>

	* fp-x86linux.c: renamed from fp-linux.c

Thu May 18 11:53:13 2000  Brian Gough  <bjg@network-theory.co.uk>

	* test.c: turned off tests for denormals on irix, since they are
 	supported

	* fp.c: added IRIX and AIX to the top-level fp.c file -- somehow
 	they had been forgotten!

2000-05-14  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* fp-tru64.c: include `/usr/include/float.h', if necessary for
	picking up FP_RND_RN and friends.

Sun Apr  2 14:25:52 2000  Brian Gough  <bjg@network-theory.co.uk>

	* fp-m68klinux.c: added file for m68k support (not complete, some
 	macros need to be checked)

Thu Mar 16 15:34:08 2000  Brian Gough  <bjg@network-theory.co.uk>

	* read.c (gsl_ieee_read_mode_string): changed token separator to ,
 	instead of ;

Thu Feb 24 19:20:50 2000  Brian Gough  <bjg@network-theory.co.uk>

	* fp-tru64.c (gsl_ieee_set_mode): added an #ifdef for
 	IEEE_TRAP_ENABLE_DNO, which may or may not be defined depending on
 	the version of Digital Unix.

Mon Feb 14 14:03:22 2000  Brian Gough  <bjg@network-theory.co.uk>

	* made internal functions static and removed redundant functions

Fri Nov  5 15:01:55 1999  Brian Gough  <bjg@network-theory.co.uk>

	* fp-sparclinux.c: added support for sparclinux

Thu Oct  7 13:03:00 1999  Brian Gough  <bjg@network-theory.co.uk>

	* make_rep.c: more careful conversion from unsigned to signed integer
 	for sign attribute to prevent warnings

Sat Aug 21 01:05:01 1999  Tim Mooney <mooney@plains.NoDak.edu>
 
    * fp-aix.c: added, based on fp-solaris.
 
Fri Aug 20 12:17:53 1999  Brian Gough  <bjg@network-theory.co.uk>

	* fp-tru64.c (gsl_ieee_set_mode): note that INEXACT is not easily
 	supported on Tru64, and give an error if anyone tries to use it

Wed Aug 18 21:36:01 1999  Tim Mooney <mooney@plains.NoDak.edu>
 